--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "firebase": "^10.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "vitest-fetch-mock": "^0.2.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
